[TabDiscarding] Reset the sudden termination features flag when renderer dies

Without this a DCHECK fires when the new process re-sends these flags.

Originally added in https://chromium-review.googlesource.com/c/chromium/src/+/562616

R=JAM
BUG=754515

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: Ie14dec6755c64c0a5328923f149d17a3ca85a710
Reviewed-on: https://chromium-review.googlesource.com/630243
Commit-Queue: oysteine <oysteine@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497256}
Former-commit-id: b7d6c1f038ae7e8c13e19c3138cee0709a2c3bf4